--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@react-native-community/masked-view": "^0.1.10",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
